# transparent-background-animation-maker

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
tbam/: __init__.py  cli.py  pipeline.py
tests/: test_cli.py  test_pipeline.py
