[project]
name = "transparent-background-animation-maker"
version = "0.1.0"
description = "Extract video frames, remove their backgrounds, and render transparent animations."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
    "onnxruntime-gpu[cuda,cudnn]>=1.21,<1.27",
    "pillow>=10.0",
    "rembg[gpu,cli]>=2.0.67",
]

[project.scripts]
tbam = "tbam.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbam"]
